--- a/automation/bedroom.yaml
+++ b/automation/bedroom.yaml
@@ -30,9 +30,10 @@
     service: light.turn_on
     data:
       entity_id: light.bedroom_light_group
-      brightness_pct: 50
+      brightness_pct: 1
       white_value: 125
       transition: 300
+      color_temp: 370
 - alias: Dimmer - Main Bedroom
   trigger:
   - entity_id: sensor.main_bedroom_dimmer_action
@@ -45,12 +46,8 @@
     service: light.turn_on
     data_template:
       transition: 1
-      brightness_pct: >
-        {% if trigger.to_state.state == 'on-press' %} 100
-        {% elif trigger.to_state.state == 'up-press' %} 50
-        {% elif trigger.to_state.state == 'down-press' %} 1
-        {% elif trigger.to_state.state == 'off-press' %} 0
-        {% endif %}
+      brightness: 1
+      color_temp: 370
       white_value: >
         {% if trigger.to_state.state == 'on-press' %} 255
         {% elif trigger.to_state.state == 'up-press' %} 125
@@ -69,7 +66,7 @@
     service: light.turn_on
     data:
       transition: 1
-      brightness_pct: 100
+      brightness: 1
       white_value: 255
       color_temp: 370
   - entity_id: switch.bedroom_relay_1
@@ -84,7 +81,7 @@
     service: light.turn_on
     data:
       transition: 1
-      brightness_pct: 50
+      brightness: 1
       color_temp: 370
       white_value: 125
   - entity_id: switch.bedroom_relay_1
