--- a/groups.yaml
+++ b/groups.yaml
@@ -6,7 +6,7 @@ backroom_lights:
   name: Back room
   icon: mdi:castle
   entities:
-    - light.backroom_middle_light
+    - light.backroom_middle
     - light.backroom_right_light
     - light.craftarea_light
 livingroom_lights:
