swap lucas/entry switches around

--- a/automation/entry.yaml
+++ b/automation/entry.yaml
@@ -5,7 +5,7 @@
     to: 'on'
   action:
     - entity_id: light.bulb_white_3
-      service: light.turn_on
+      service: light.toggle
       data:
         transition: 0
         brightness_pct: 100
@@ -18,20 +18,7 @@
     to: 'on'
   action:
     - entity_id: light.sensor_light
-      service: light.turn_on
+      service: light.toggle
       data:
         transition: 0
         brightness_pct: 100
-- alias: Entry - Switch3
-  trigger:
-  - entity_id: binary_sensor.entry_switch3
-    platform: state
-    to: 'on'
-  action:
-    - entity_id: light.bulb_white_3
-      service: light.turn_off
-    - entity_id: light.bulb_colour_3
-      service: light.turn_off
-    - entity_id: light.sensor_light
-      service: light.turn_off
-    
