--- a/switches/light_groups.yaml
+++ b/switches/light_groups.yaml
@@ -39,6 +39,7 @@
         data:
             entity_id: light.backroom_light_group
             brightness_pct: 100
+            color_temp: 370
             transition: 1
       turn_off:
         service: light.turn_off
@@ -86,7 +87,9 @@
         service: light.turn_on
         data:
             entity_id: light.bedroom_light_group
-            brightness_pct: 100
+            brightness: 1
+            white_value: 255
+            color_temp: 370
             transition: 1
       turn_off:
         service: light.turn_off
