--- a/automation/presence.yaml
+++ b/automation/presence.yaml
@@ -33,7 +33,7 @@
       data:
         effect: Rainbow
     - service: light.turn_on
-      entity_id: light.tv_backlight_2
+      entity_id: light.tv_backlight
       data:
         effect: Random Twinkle
     - service: notify.hangout_notify
@@ -53,7 +53,7 @@
       data:
         effect: Rainbow
     - service: light.turn_on
-      entity_id: light.tv_backlight_2
+      entity_id: light.tv_backlight
       data:
         effect: Random Twinkle
     - service: notify.hangout_notify
