--- a/automation/lucas.yaml
+++ b/automation/lucas.yaml
@@ -5,10 +5,11 @@
     to: "on"
   condition: []
   action:
-  - entity_id: light.lucas_bedroom_light
+  - entity_id: light.lucas_bedroom
     service: light.turn_on
     data:
-      brightness_pct: 100
+      brightness_pct: 1
+      white_value: 255
   - entity_id: switch.lucas_relay_1
     service: switch.turn_on
 - alias: Lucas switch2
@@ -20,10 +21,11 @@
   action:
   - entity_id: switch.lucas_relay_1
     service: switch.turn_on
-  - entity_id: light.lucas_bedroom_light
+  - entity_id: light.lucas_bedroom
     service: light.turn_on
     data:
-      brightness_pct: 20
+      white_value: 120
+      brightness_pct: 1
 - alias: Lucas switch3
   trigger:
   - entity_id: binary_sensor.lucas_switch3
@@ -31,5 +33,5 @@
     to: "on"
   condition: []
   action:
-  - entity_id: light.lucas_bedroom_light
+  - entity_id: light.lucas_bedroom
     service: light.turn_off
