--- a/groups.yaml
+++ b/groups.yaml
@@ -6,18 +6,17 @@ backroom_lights:
   name: Back room
   icon: mdi:castle
   entities:
-    - light.backroom_middle
-    - light.backroom_right
-    - light.backroom_left
+    - light.backroom_middle2
+    - light.backroom_right_2
+    - light.backroom_left_2
 livingroom_lights:
   name: Living Room
   icon: mdi:sofa
   entities:
     - switch.livingroom_light
-    - light.livingroom_main_a_light
-    - light.livingroom_main_b_light
     - light.livingroom_side
     - light.livingroom_a
+    - light.livingroom_b
 bedroom_lights:
   name: Bedroom
   icon: mdi:bed-empty
