--- a/esphome/bulb_lucas.yaml
+++ b/esphome/bulb_lucas.yaml
@@ -1,8 +1,7 @@
 esphome:
-  name: bulb_entry
+  name: bulb_lucas
   platform: ESP8266
   board: esp01_1m
-
 
 wifi:
   ssid: !secret wifi_ssid
@@ -14,30 +13,27 @@ api:
 
 ota:
 
-sm16716:
-  data_pin: GPIO14
-  clock_pin: GPIO4
-  num_channels: 3
-  num_chips: 1
-    
 output:
-  - platform: sm16716
-    id: output_red
-    channel: 0
-  - platform: sm16716
-    id: output_green
-    channel: 1
-  - platform: sm16716
-    id: output_blue
-    channel: 2
   - platform: esp8266_pwm
-    id: IO1
+    id: output_red
+    pin: GPIO4
+  - platform: esp8266_pwm
+    id: output_green
+    pin: GPIO12
+  - platform: esp8266_pwm
+    id: output_blue
+    pin: GPIO14
+  - platform: esp8266_pwm
+    id: output_white
     pin: GPIO5
-  
+
+# Define a light entity
 light:
   - platform: rgbw
-    name: "Entry"
+    name: Lucas Bedroom
     red: output_red
     green: output_green
     blue: output_blue
-    white: IO1
+    white: output_white
+    
+    restore_mode: ALWAYS_ON
