--- a/automation/bedroom.yaml
+++ b/automation/bedroom.yaml
@@ -2,7 +2,7 @@
   alias: Main bedroom - Kid indicator
   trigger:
     - platform: state
-      entity_id: light.lucas_bedroom_light
+      entity_id: light.lucas_bedroom
     - platform: state
       entity_id: light.xander_bedroom_light
   condition: []
@@ -10,11 +10,11 @@
     service: light.turn_on
     data_template:
       entity_id: light.bedroom_led
-      brightness_pct: "{% if is_state('light.lucas_bedroom_light', 'off') and is_state('light.xander_bedroom_light', 'off') %}0{% else %}40{% endif %}"
+      brightness_pct: "{% if is_state('light.lucas_bedroom', 'off') and is_state('light.xander_bedroom_light', 'off') %}0{% else %}40{% endif %}"
       color_name: >
-        {% if is_state('light.lucas_bedroom_light', 'on') and is_state('light.xander_bedroom_light', 'on') %} red
-        {% elif is_state('light.lucas_bedroom_light', 'off') and is_state('light.xander_bedroom_light', 'on') %} green
-        {% elif is_state('light.lucas_bedroom_light', 'on') and is_state('light.xander_bedroom_light', 'off') %} blue
+        {% if is_state('light.lucas_bedroom', 'on') and is_state('light.xander_bedroom_light', 'on') %} red
+        {% elif is_state('light.lucas_bedroom', 'off') and is_state('light.xander_bedroom_light', 'on') %} green
+        {% elif is_state('light.lucas_bedroom', 'on') and is_state('light.xander_bedroom_light', 'off') %} blue
         {% else %} white
         {% endif %}
 - id: main_bedroom_night_mode
