--- a/automation/kitchen.yaml
+++ b/automation/kitchen.yaml
@@ -12,6 +12,7 @@
     data:
       transition: 1
       brightness_pct: 100
+      white_value: 255
 - alias: Kitchen - Switch2
   trigger:
   - entity_id: binary_sensor.kitchen_switch2
@@ -26,6 +27,7 @@
     data:
       transition: 1
       brightness_pct: 40
+      white_value: 155
 - alias: Kitchen - Switch3
   trigger:
   - entity_id: binary_sensor.kitchen_switch3
