--- a/automation/bedroom.yaml
+++ b/automation/bedroom.yaml
@@ -2,7 +2,7 @@
   alias: Main bedroom - Kid indicator
   trigger:
     - platform: state
-      entity_id: light.lucas_bedroom
+      entity_id: light.lucas
     - platform: state
       entity_id: light.xander_bedroom_light
   condition: []
@@ -10,11 +10,11 @@
     service: light.turn_on
     data_template:
       entity_id: light.bedroom_led
-      brightness_pct: "{% if is_state('light.lucas_bedroom', 'off') and is_state('light.xander_bedroom_light', 'off') %}0{% else %}40{% endif %}"
+      brightness_pct: "{% if is_state('light.lucas', 'off') and is_state('light.xander_bedroom_light_light', 'off') %}0{% else %}40{% endif %}"
       color_name: >
-        {% if is_state('light.lucas_bedroom', 'on') and is_state('light.xander_bedroom_light', 'on') %} red
-        {% elif is_state('light.lucas_bedroom', 'off') and is_state('light.xander_bedroom_light', 'on') %} green
-        {% elif is_state('light.lucas_bedroom', 'on') and is_state('light.xander_bedroom_light', 'off') %} blue
+        {% if is_state('light.lucas', 'on') and is_state('light.xander_bedroom_light_light', 'on') %} red
+        {% elif is_state('light.lucas', 'off') and is_state('light.xander_bedroom_light_light', 'on') %} green
+        {% elif is_state('light.lucas', 'on') and is_state('light.xander_bedroom_light_light', 'off') %} blue
         {% else %} white
         {% endif %}
 - id: main_bedroom_night_mode
@@ -30,7 +30,7 @@
     service: light.turn_on
     data:
       entity_id: light.bedroom_light_group
-      brightness: 1
+      brightness: 125
       white_value: 125
       transition: 300
       color_temp: 370
@@ -66,7 +66,7 @@
     service: light.turn_on
     data:
       transition: 1
-      brightness: 1
+      brightness: 255
       white_value: 255
       color_temp: 370
   - entity_id: switch.bedroom_relay_1
@@ -81,7 +81,7 @@
     service: light.turn_on
     data:
       transition: 1
-      brightness: 1
+      brightness: 125
       color_temp: 370
       white_value: 125
   - entity_id: switch.bedroom_relay_1
